tests/machine/x/st/len_map.st
Transcript show: ((Dictionary newFrom: {'a' -> 1. 'b' -> 2} size)) printString; cr.
